--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 # NOTE: update this with your service name
-service: notes-app-api
+service: notes-app-api-nati
 
-# Create an optimized package for our functions 
+# Create an optimized package for our functions
 package:
   individually: true
 
